# apply

./: .gitignore  apply.cabal
src/Generics/: Apply.hs
src/Generics/Apply/: Base.hs  Classes.hs  GHCGenerics.hs  GenericLens.hs  SOP.hs
